# ChangeLog for dev-ruby/rake-remote_task
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rake-remote_task/ChangeLog,v 1.14 2012/12/03 19:20:54 graaff Exp $

*rake-remote_task-2.1.0 (03 Dec 2012)

  03 Dec 2012; Hans de Graaff <graaff@gentoo.org>
  +rake-remote_task-2.1.0.ebuild:
  Version bump.

  15 Sep 2012; Hans de Graaff <graaff@gentoo.org>
  -rake-remote_task-2.0.4-r1.ebuild, -rake-remote_task-2.0.5.ebuild:
  Cleanup.

*rake-remote_task-2.0.6 (28 Jan 2012)

  28 Jan 2012; Hans de Graaff <graaff@gentoo.org>
  +rake-remote_task-2.0.6.ebuild:
  Version bump.

*rake-remote_task-2.0.5 (24 Dec 2011)

  24 Dec 2011; Hans de Graaff <graaff@gentoo.org>
  +rake-remote_task-2.0.5.ebuild:
  Version bump. Drop hacks for open4 version since this is now updated
  upstream.

  24 Dec 2011; Hans de Graaff <graaff@gentoo.org>
  -rake-remote_task-2.0.3.ebuild, -rake-remote_task-2.0.4.ebuild:
  Remove old versions.

*rake-remote_task-2.0.4-r1 (20 Jul 2011)

  20 Jul 2011; Hans de Graaff <graaff@gentoo.org>
  +rake-remote_task-2.0.4-r1.ebuild:
  Make more lenient with open4 versions. Remove useless install phase.

*rake-remote_task-2.0.4 (20 Jul 2011)

  20 Jul 2011; Hans de Graaff <graaff@gentoo.org>
  +rake-remote_task-2.0.4.ebuild:
  Version bump.

  24 Jun 2011; Hans de Graaff <graaff@gentoo.org>
  -rake-remote_task-2.0.2.ebuild:
  Remove old version.

*rake-remote_task-2.0.3 (19 Feb 2011)

  19 Feb 2011; Hans de Graaff <graaff@gentoo.org>
  +rake-remote_task-2.0.3.ebuild:
  Version bump.

  19 Feb 2011; Hans de Graaff <graaff@gentoo.org>
  -rake-remote_task-2.0.0.ebuild, -rake-remote_task-2.0.1.ebuild:
  Remove old versions.

*rake-remote_task-2.0.2 (02 Oct 2010)

  02 Oct 2010; Hans de Graaff <graaff@gentoo.org>
  +rake-remote_task-2.0.2.ebuild:
  Version bump.

  18 Aug 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  rake-remote_task-2.0.0.ebuild, rake-remote_task-2.0.1.ebuild: