@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/rake-remote_task
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rake-remote_task/ChangeLog,v 1.14 2012/12/03 19:20:54 graaff Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rake-remote_task/ChangeLog,v 1.15 2013/04/13 13:37:50 graaff Exp $
+
+*rake-remote_task-2.2.1 (13 Apr 2013)
+
+  13 Apr 2013; Hans de Graaff <graaff@gentoo.org>
+  +rake-remote_task-2.2.1.ebuild:
+  Version bump.
 
 *rake-remote_task-2.1.0 (03 Dec 2012)
 
